"""Test the generic hygrostat config flow."""

from unittest.mock import patch

import pytest
from syrupy.assertion import SnapshotAssertion
from syrupy.filters import props

from homeassistant.components.climate import PRESET_AWAY
from homeassistant.components.generic_thermostat.config_flow import _validate_config
from homeassistant.components.generic_thermostat.const import (
    CONF_AC_MODE,
    CONF_COLD_TOLERANCE,
    CONF_HEATER,
    CONF_HOT_TOLERANCE,
    CONF_KEEP_ALIVE,
    CONF_MAX_DUR,
    CONF_MIN_DUR,
    CONF_PRECISION,
    CONF_PRESETS,
    CONF_SENSOR,
    CONF_TEMP_STEP,
    DOMAIN,
)
from homeassistant.components.sensor import SensorDeviceClass
from homeassistant.config_entries import SOURCE_USER
from homeassistant.const import (
    ATTR_DEVICE_CLASS,
    ATTR_UNIT_OF_MEASUREMENT,
    CONF_NAME,
    STATE_OFF,
    UnitOfTemperature,
)
from homeassistant.core import HomeAssistant
from homeassistant.helpers.schema_config_entry_flow import SchemaFlowError

from tests.common import MockConfigEntry

SNAPSHOT_FLOW_PROPS = props("type", "title", "result", "error")


async def test_config_flow(hass: HomeAssistant, snapshot: SnapshotAssertion) -> None:
    """Test the config flow."""
    with patch(
        "homeassistant.components.generic_thermostat.async_setup_entry",
        return_value=True,
    ) as mock_setup_entry:
        result = await hass.config_entries.flow.async_init(
            DOMAIN, context={"source": SOURCE_USER}
        )
        assert result == snapshot(name="init", include=SNAPSHOT_FLOW_PROPS)

        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            {
                CONF_NAME: "My thermostat",
                CONF_HEATER: "switch.run",
                CONF_SENSOR: "sensor.temperature",
                CONF_AC_MODE: False,
                CONF_COLD_TOLERANCE: 0.3,
                CONF_HOT_TOLERANCE: 0.3,
            },
        )
        assert result == snapshot(name="presets", include=SNAPSHOT_FLOW_PROPS)

        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            user_input={
                CONF_PRESETS[PRESET_AWAY]: 20,
            },
        )
        assert result == snapshot(name="create_entry", include=SNAPSHOT_FLOW_PROPS)

        await hass.async_block_till_done()

    assert len(mock_setup_entry.mock_calls) == 1

    config_entry = hass.config_entries.async_entries(DOMAIN)[0]
    assert config_entry.data == {}
    assert config_entry.title == "My thermostat"


async def test_options(hass: HomeAssistant, snapshot: SnapshotAssertion) -> None:
    """Test reconfiguring."""

    config_entry = MockConfigEntry(
        data={},
        domain=DOMAIN,
        options={
            CONF_NAME: "My thermostat",
            CONF_HEATER: "switch.run",
            CONF_SENSOR: "sensor.temperature",
            CONF_AC_MODE: False,
            CONF_COLD_TOLERANCE: 0.3,
            CONF_HOT_TOLERANCE: 0.3,
            CONF_KEEP_ALIVE: {"seconds": 60},
            CONF_PRESETS[PRESET_AWAY]: 20,
        },
        title="My dehumidifier",
    )
    config_entry.add_to_hass(hass)

    hass.states.async_set(
        "sensor.temperature",
        "15",
        {
            ATTR_UNIT_OF_MEASUREMENT: UnitOfTemperature.CELSIUS,
            ATTR_DEVICE_CLASS: SensorDeviceClass.TEMPERATURE,
        },
    )
    hass.states.async_set("switch.run", STATE_OFF)

    assert await hass.config_entries.async_setup(config_entry.entry_id)

    # check that it is setup
    await hass.async_block_till_done()
    assert hass.states.get("climate.my_thermostat") == snapshot(name="with_away")

    # remove away preset
    result = await hass.config_entries.options.async_init(config_entry.entry_id)
    assert result == snapshot(name="init", include=SNAPSHOT_FLOW_PROPS)

    result = await hass.config_entries.options.async_configure(
        result["flow_id"],
        user_input={
            CONF_HEATER: "switch.run",
            CONF_SENSOR: "sensor.temperature",
            CONF_AC_MODE: False,
            CONF_COLD_TOLERANCE: 0.3,
            CONF_HOT_TOLERANCE: 0.3,
        },
    )
    assert result == snapshot(name="presets", include=SNAPSHOT_FLOW_PROPS)

    result = await hass.config_entries.options.async_configure(
        result["flow_id"],
        user_input={},
    )
    assert result == snapshot(name="create_entry", include=SNAPSHOT_FLOW_PROPS)

    # Check config entry is reloaded with new options
    await hass.async_block_till_done()
    assert hass.states.get("climate.my_thermostat") == snapshot(name="without_away")


async def test_config_flow_preset_accepts_float(
    hass: HomeAssistant, snapshot: SnapshotAssertion
) -> None:
    """Test the config flow with preset is a float."""
    with patch(
        "homeassistant.components.generic_thermostat.async_setup_entry",
        return_value=True,
    ) as mock_setup_entry:
        result = await hass.config_entries.flow.async_init(
            DOMAIN, context={"source": SOURCE_USER}
        )
        assert result == snapshot(name="init", include=SNAPSHOT_FLOW_PROPS)

        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            {
                CONF_NAME: "My thermostat",
                CONF_HEATER: "switch.run",
                CONF_SENSOR: "sensor.temperature",
                CONF_AC_MODE: False,
                CONF_COLD_TOLERANCE: 0.3,
                CONF_HOT_TOLERANCE: 0.3,
            },
        )
        assert result == snapshot(name="presets", include=SNAPSHOT_FLOW_PROPS)

        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            user_input={
                CONF_PRESETS[PRESET_AWAY]: 10.4,
            },
        )
        assert result == snapshot(name="create_entry", include=SNAPSHOT_FLOW_PROPS)

        await hass.async_block_till_done()

    assert len(mock_setup_entry.mock_calls) == 1
    assert result["options"] == {
        "ac_mode": False,
        "away_temp": 10.4,
        "cold_tolerance": 0.3,
        "heater": "switch.run",
        "hot_tolerance": 0.3,
        "name": "My thermostat",
        "precision": "0.1",
        "target_sensor": "sensor.temperature",
        "target_temp_step": "0.5",
    }


async def test_config_flow_with_keep_alive(hass: HomeAssistant) -> None:
    """Test the config flow when keep_alive is set."""
    with patch(
        "homeassistant.components.generic_thermostat.async_setup_entry",
        return_value=True,
    ) as mock_setup_entry:
        result = await hass.config_entries.flow.async_init(
            DOMAIN, context={"source": SOURCE_USER}
        )

        # Keep_alive input data for test
        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            {
                CONF_NAME: "My thermostat",
                CONF_HEATER: "switch.run",
                CONF_SENSOR: "sensor.temperature",
                CONF_AC_MODE: False,
                CONF_COLD_TOLERANCE: 0.3,
                CONF_HOT_TOLERANCE: 0.3,
                CONF_KEEP_ALIVE: {"seconds": 60},
            },
        )

        # Complete config flow
        result = await hass.config_entries.flow.async_configure(
            result["flow_id"],
            user_input={
                CONF_PRESETS[PRESET_AWAY]: 21,
            },
        )

        assert result["type"] == "create_entry"

        val = result["options"].get(CONF_KEEP_ALIVE)
        assert val is not None
        assert isinstance(val, dict)
        assert val == {"seconds": 60}

        await hass.async_block_till_done()
        assert len(mock_setup_entry.mock_calls) == 1


async def test_validate_config_min_max_duration() -> None:
    """Test _validate_config with min and max cycle duration validation."""
    # Test valid case: min_dur < max_dur
    user_input = {
        CONF_MIN_DUR: {"seconds": 30},
        CONF_MAX_DUR: {"minutes": 1},
    }
    result = await _validate_config(None, user_input)
    assert result == user_input

    # Test invalid case: min_dur >= max_dur
    user_input_invalid = {
        CONF_MIN_DUR: {"minutes": 2},
        CONF_MAX_DUR: {"minutes": 1},
    }
    with pytest.raises(SchemaFlowError) as exc_info:
        await _validate_config(None, user_input_invalid)
    assert str(exc_info.value) == "min_max_runtime"

    # Test equal durations (should fail)
    user_input_equal = {
        CONF_MIN_DUR: {"minutes": 1},
        CONF_MAX_DUR: {"minutes": 1},
    }
    with pytest.raises(SchemaFlowError) as exc_info:
        await _validate_config(None, user_input_equal)
    assert str(exc_info.value) == "min_max_runtime"

    # Test without both durations (should pass)
    user_input_partial = {
        CONF_MIN_DUR: {"seconds": 30},
    }
    result = await _validate_config(None, user_input_partial)
    assert result == user_input_partial


BASE_OPTIONS = {
    CONF_NAME: "My thermostat",
    CONF_HEATER: "switch.run",
    CONF_SENSOR: "sensor.temperature",
    CONF_AC_MODE: False,
    CONF_COLD_TOLERANCE: 0.3,
    CONF_HOT_TOLERANCE: 0.3,
}


@pytest.mark.parametrize(
    (
        "precision",
        "sensor_reading",
        "target_temp",
        "expected_current",
        "expected_target",
    ),
    [
        pytest.param("0.1", "20.34", 21.77, 20.3, 21.8, id="tenths"),
        pytest.param("0.5", "20.3", 21.7, 20.5, 21.5, id="halves"),
        pytest.param("1", "20.3", 21.7, 20.0, 22.0, id="whole"),
    ],
)
async def test_precision_rounds_displayed_temperatures(
    hass: HomeAssistant,
    precision: str,
    sensor_reading: str,
    target_temp: float,
    expected_current: float,
    expected_target: float,
) -> None:
    """Test that precision from config entry options rounds current and target temperature display."""
    config_entry = MockConfigEntry(
        data={},
        domain=DOMAIN,
        options={
            **BASE_OPTIONS,
            CONF_PRECISION: precision,
            "target_temp": target_temp,
        },
        title="My thermostat",
    )
    config_entry.add_to_hass(hass)
    hass.states.async_set("switch.run", STATE_OFF)
    hass.states.async_set("sensor.temperature", sensor_reading)

    assert await hass.config_entries.async_setup(config_entry.entry_id)
    await hass.async_block_till_done()

    state = hass.states.get("climate.my_thermostat")
    assert state is not None
    assert state.attributes["current_temperature"] == expected_current
    assert state.attributes["temperature"] == expected_target


@pytest.mark.parametrize(
    ("temp_step", "expected_step"),
    [
        pytest.param("0.1", 0.1, id="tenths"),
        pytest.param("0.5", 0.5, id="halves"),
        pytest.param("1", 1.0, id="whole"),
    ],
)
async def test_target_temp_step_configurable(
    hass: HomeAssistant,
    temp_step: str,
    expected_step: float,
) -> None:
    """Test that target_temp_step from config entry options sets the UI step size."""
    config_entry = MockConfigEntry(
        data={},
        domain=DOMAIN,
        options={**BASE_OPTIONS, CONF_TEMP_STEP: temp_step},
        title="My thermostat",
    )
    config_entry.add_to_hass(hass)
    hass.states.async_set("switch.run", STATE_OFF)
    hass.states.async_set("sensor.temperature", "20")

    assert await hass.config_entries.async_setup(config_entry.entry_id)
    await hass.async_block_till_done()

    state = hass.states.get("climate.my_thermostat")
    assert state is not None
    assert state.attributes["target_temp_step"] == expected_step


async def test_precision_and_temp_step_independent(hass: HomeAssistant) -> None:
    """Test that precision and target_temp_step can be set independently."""
    config_entry = MockConfigEntry(
        data={},
        domain=DOMAIN,
        options={**BASE_OPTIONS, CONF_PRECISION: "0.1", CONF_TEMP_STEP: "0.5"},
        title="My thermostat",
    )
    config_entry.add_to_hass(hass)
    hass.states.async_set("switch.run", STATE_OFF)
    hass.states.async_set("sensor.temperature", "20.34")

    assert await hass.config_entries.async_setup(config_entry.entry_id)
    await hass.async_block_till_done()

    state = hass.states.get("climate.my_thermostat")
    assert state is not None
    assert state.attributes["current_temperature"] == 20.3
    assert state.attributes["target_temp_step"] == 0.5
