# serializer version: 1
# name: test_config_flow[create_entry]
  FlowResultSnapshot({
    'result': ConfigEntrySnapshot({
      'title': 'My thermostat',
    }),
    'title': 'My thermostat',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_config_flow[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_config_flow[presets]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_config_flow_preset_accepts_float[create_entry]
  FlowResultSnapshot({
    'result': ConfigEntrySnapshot({
      'title': 'My thermostat',
    }),
    'title': 'My thermostat',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_config_flow_preset_accepts_float[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_config_flow_preset_accepts_float[presets]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[create_entry]
  FlowResultSnapshot({
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_options[init]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[presets]
  FlowResultSnapshot({
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_options[with_away]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 15.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'away',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 7,
    }),
    'context': <ANY>,
    'entity_id': 'climate.my_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_options[without_away]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 15.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 7.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.my_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
